--- a/trunk/src/app/layouts/scripts/_loginform.phtml
+++ b/trunk/src/app/layouts/scripts/_loginform.phtml
@@ -5,6 +5,5 @@ Emory Login:
   <?= $this->formHidden("login[url]", $_SERVER['REQUEST_URI']); ?>
   <?= $this->formPassword("login[password]", "", array("size" => 32)); ?>
   <?= $this->formSubmit("Submit", "Login >", array("class" => "button submitlink")); ?>
-      <br />
-      (Login to submit and manage theses and dissertations)
+    <span class="tip">(Login to submit or manage theses and dissertations)</span>
 </form>
