--- a/trunk/src/app/layouts/scripts/sidenav.phtml
+++ b/trunk/src/app/layouts/scripts/sidenav.phtml
@@ -12,7 +12,7 @@
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "faq"), '', true); ?>">Frequently Asked Questions</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs"), '', true); ?>/help" class="help">ETD Help</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "policies"), '', true); ?>">Policies and Procedures</a></p>
-  <p><a href="<?= $this->url(array("controller" => "docs", "action" => "ip"), '', true); ?>">Intellectual Property</a></p>
+  <p><a href="<?= $this->url(array("controller" => "docs", "action" => "ip"), '', true); ?>">Copyright and Patents</a></p>
 </div>
 
 <? if (! $this->suppress_sidenav_browse): ?>
