--- a/trunk/src/app/views/scripts/submission/start.phtml
+++ b/trunk/src/app/views/scripts/submission/start.phtml
@@ -27,8 +27,11 @@
 
 <ol id="screening-questions">
  <li><p>
-         Have you included any text, audio-visual, or other material not
-         created by you or for which you no longer control copyright?
+         Does your thesis or dissertation include any text, audiovisual, or
+         other material not created by you or for which you no longer own
+         copyright?  (See the Copyright
+         <a target="_blank" href="https://classes.emory.edu/webapps/lobj-wiki-bb_bb60/wiki_home/Handler?course_id=_11416_1&content_id=_1251529_1">Education Initiative on Blackboard</a>
+         for more information if you are uncertain how to answer this question)
      </p>
     <?= $this->formRadio('copyright', $this->answers['copyright'], 
         array('class' => 'required-field'), $this->yes_no) ?>
@@ -36,19 +39,22 @@
     <div id="copyright_yes"> 
       <ol class="alpha">
       <li>
-          <p>Have you obtained permission to use these materials? (Examples of
-          materials for which you may need permission include long
-          quotations, images, articles you authored for which you no
-          longer own copyright.)</p>
+          <p>Have you obtained permission to use these materials?</p>
 
-          <p><em>Please Note:</em> Materials in the public domain or materials that fit the Fair Use
-          parameters of the <a href="http://www.copyright.gov/fls/fl102.html" target="_blank">U.S. 
-          Copyright Law</a> <b>DO NOT REQUIRE</b> permission.  See the 
-          <a href="https://classes.emory.edu/webapps/lobj-wiki-bb_bb60/wiki_home/Handler?course_id=_11416_1&content_id=_1251529_1"
+          <p>Examples of materials for which you may need permission include
+              long quotations, images, and articles you authored for which you
+              no longer own copyright.  You will need to list the materials
+              for which you obtained permission on the Submission Form.</p>
+          <p><b>Please Note:</b></p>
+          <p>Materials in the public domain, materials with Creative Commons 
+              licenses or materials that fit the Fair Use parameters of
+              <a href="http://www.copyright.gov/fls/fl102.html" target="_blank">U.S.
+          Copyright Law</a> DO NOT REQUIRE permission.
+          <p>See the
+              <a href="https://classes.emory.edu/webapps/lobj-wiki-bb_bb60/wiki_home/Handler?course_id=_11416_1&content_id=_1251529_1"
              target="_blank">Copyright Education Initiative</a>
           on Blackboard for more information on the public domain, fair use,
-          the permissions process,
-          and example permission letters.</p>
+          Creative Commons, the permissions process, and example permission letters.</p>
 
       <?= $this->formRadio("copyright_permission", $this->answers["copyright_permission"], array(),
 			      $this->yes_no) ?>
@@ -58,11 +64,12 @@
       <? /* copyright permission details */ ?>
       <div id="copyright_perms_no">  <? /*  Show if answered NO to permissions */ ?> 
         <p>
-            If you have not obtained necessary permissions, you must obtain
-            permissions or remove the copyrighted content from your ETD
-            before proceeding with submission.  Please contact Lisa Macklin or
-            Melanie Kowalski of the Libraries Scholarly Communication Office
-            at <a href="mailto:scholcomm@listserv.cc.emory.edu">scholcomm@listserv.cc.emory.edu</a>
+            If you have not obtained necessary permissions, you must obtain 
+            permissions or remove the copyrighted content from your ETD before 
+            proceeding with submission.  Please contact Lisa Macklin or 
+            Melanie Kowalski of the Libraries’ Scholarly Communications Office 
+            at scholcomm@listserv.cc.emory.edu if you have questions.
+            <a href="mailto:scholcomm@listserv.cc.emory.edu">scholcomm@listserv.cc.emory.edu</a>
             if you have questions.
         </p>
       </div>
@@ -75,22 +82,24 @@
 
     </div>
 
- <li><p>Does your thesis or dissertation disclose or describe any 
-         inventions or discoveries that could potentially have commercial 
-         application and therefore may be patented? (If you and/or your 
-         faculty advisor(s) have any questions about patents and commercial 
-         applications, please contact the Emory Office of Technology Transfer 
-         at <a href="mailto:ott-web@emory.edu">ott-web@emory.edu</a>).
+ <li><p>
+         Does your thesis or dissertation disclose or describe any inventions
+         or discoveries that could potentially have commercial application 
+         and therefore may be patented? (If you and/or your faculty advisor(s) 
+         have any questions about patents and commercial applications, please 
+         contact the Emory Office of Technology Transfer at
+         <a href="mailto:ott-web@emory.edu">ott-web@emory.edu</a>).
      </p>
     <?= $this->formRadio("patent", $this->answers["patent"],
        array('class' => 'required-field'), $this->yes_no) ?>
   <div id="patent_yes">   <? /* display only if yes to patent */ ?>	 
      <p>
-         If your ETD describes an invention or discovery that may be 
-         patented, further conversation with ETD administrators is required 
-         before you can continue with the ETD submission process. Please 
-         contact ETD Help at <a href="mailto:etd-admin@listerv.cc.emory.edu">etd-admin@listerv.cc.emory.edu</a> or 
-         call (404)727-5301.
+         If your ETD describes an invention or discovery that may be patented, 
+         further conversation with ETD administrators is required before you 
+         can continue with the ETD submission process. Please contact ETD Help 
+         at etd-admin@listerv.cc.emory.edu or call (404)727-5301.
+         <a href="mailto:etd-admin@listerv.cc.emory.edu">etd-admin@listerv.cc.emory.edu</a>
+         or call (404)727-5301.
      </p>
      <? /* TODO: use configured email; remove phone number? */ ?>
   </div>
@@ -101,28 +110,29 @@
 			     array('class' => 'required-field'), $this->yes_no) ?>
     <div id="embargo_yes">    <? /* display if answer to embargo is yes */ ?>
      <p>
-         Please indicate how long you intend to restrict access to your 
-         dissertation or thesis on the Submission Form. You will also need to 
-         indicate your request for an access restriction during the 
-         submission process itself.
+         Please indicate how long you intend to restrict access to your
+         dissertation or thesis on the Submission Form. You will also need to
+         indicate your request for an access restriction during the submission
+         process itself.
      </p>
 
      <ol class="alpha">
       <li>
-        <p>The ETD system allows for both full and partial embargo of your 
-        work. A partial embargo will allow visitors to read your abstract 
-        and/or table of contents while the full text of your thesis or 
-        dissertation is embargoed. A full embargo allows to you hide this 
-        information for the duration of the embargo period. Should your 
-        abstract and/or table of contents be included in the access restriction?</p>
+        <p>The ETD system allows for both full and partial embargo of your
+            work. A partial embargo will allow visitors to read your abstract
+            and/or table of contents while the full text of your thesis or
+            dissertation is embargoed. A full embargo allows to you hide this
+            information for the duration of the embargo period. Should your
+            abstract and/or table of contents be included in the access
+            restriction?</p>
         <?= $this->formRadio("embargo_abs_toc", ($this->answers["embargo_abs_toc"] == null ? null : $this->answers["embargo_abs_toc"]), array('class' => 'required-field'), $this->yes_no) ?>
 
         <div id="embargo_abs_toc_yes">  <? /* display only if restricting abstract/toc */ ?>
           <p>
-          You will need to restrict access to your abstract and/or your 
-          table of contents once you have uploaded you document to the ETD 
-          repository. If you have already submitted your document to the ETD 
-          repository, you can log in and make appropriate changes to your 
+          You will need to restrict access to your abstract and/or your
+          table of contents once you have uploaded you document to the ETD
+          repository. If you have already submitted your document to the ETD
+          repository, you can log in and make appropriate changes to your
           record while it is in draft form.
         </p>
       </div>
