--- a/src/app/views/scripts/submission/_status.phtml
+++ b/src/app/views/scripts/submission/_status.phtml
@@ -13,14 +13,13 @@
  $optional = "<span class='optional'>&#x2717;</span>"; // blue x
 ?>
 
-<a class="help next-toggle" 
+  <a class="help next-toggle" 
    target="_blank" 
    href="<?= $this->url(array('controller' => 'docs', 'action' => 'instructions'), '', true, false) ?>"
-   title="Submission Help"><img src="<?= $this->linkTo("images/help.png") ?>" alt="help"/>
+   title="Submission Help"><img src="<?= $this->linkTo("images/help.png") ?>" alt="help"/></a>
    <? /* redundant link to instructions in case users click instead of mouseover */ ?>
 
   <div id="help-info" style="display:none">
-
     <div>
       <a class="instructions" target="_blank" href="<?= $this->url(array('controller' => 'docs', 'action' => 'instructions'), '', true, false) ?>">Submission Instructions</a>
     </div>
@@ -31,32 +30,22 @@
       <div><span><?= $ok ?></span> = completed</div>
     </div>
   </div>
-</a>
+
 
 <h2>submission status</h2>
 
+<ul id="submission-checklist">
+
 <? if (isset($etd->authorInfo)): ?>
+  <? /* if author info exists, display ok/incomplete with edit link */ ?>
    <? $authorInfo_url = $this->url(array("controller" => "authorInfo", "action" => "view",
            "pid" => $etd->authorInfo->pid), '', true, false); ?>
-   <? if ($etd->readyToSubmit("authorInfo")): ?>
-      <?= $ok ?> <a href="<?= $authorInfo_url ?>">contact information</a><br/>
-   <? else: ?>
-    <?
-     $missing_fields = $etd->authorInfo->checkFields(array_intersect(
-          array_merge($required_fields, $optional_fields),
-          $etd->authorInfo->available_fields));
-    ?>
-      <?= $incomplete ?> <a href="<?= $authorInfo_url ?>">contact information</a><br/>
-        <ul id="user_missing" class="missing">
-      <? /* list any missing fields (required or optional) provided by author info */ ?>
-      <? foreach ($missing_fields as $missing): ?>
-             <li><?= $missing ?></li>
-          <? endforeach ?>
-        </ul>
-   <? endif ?>
- <? else: /* no author info - link to create new record */ ?> 
-    <?= $incomplete ?> <a href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'new',
-      'etd' => $etd->pid), '', true, false) ?> ">contact information</a><br/>
+  <li><?= $etd->readyToSubmit("authorInfo") ? $ok : $incomplete ?>
+    <a href="<?= $authorInfo_url ?>" title="edit contact information">contact information</a></li>
+ <? else: ?> 
+   <? /* no author info - link to create new record */  ?>
+    <li><?= $incomplete ?> <a href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'new',
+      'etd' => $etd->pid), '', true, false) ?>" title="add contact information">contact information</a></li>
  <? endif ?>
 
 <? // thesis metadata is displayed in two sections
@@ -66,85 +55,101 @@
  $missing_thesis_fields = array_intersect($required_missing, $thesis_fields);
  $optional_thesis_fields = array_intersect($optional_missing, $thesis_fields);
 ?>
-<ul id="mods" class="mods">
-         <? foreach ($thesis_fields as $field): ?>
-           <li> 
-               <? if(in_array($field, $missing_thesis_fields)): ?>
-                  <span><?= $incomplete ?></span>
-               <? elseif(in_array($field, $optional_thesis_fields)): ?>
-                  <span><?= $optional ?></span>
-               <? else: ?>
-                  <span><?= $ok ?></span>
-               <? endif ?>
-               <a href="<?= $this->editFieldLink($field) ?>">
-                  <?= $etd->mods->fieldLabel($field) ?></a>
-           </li>
-         <? endforeach ?>
-</ul>
+<? foreach ($thesis_fields as $field): ?>
+   <li> 
+     <? if(in_array($field, $missing_thesis_fields)): ?>
+        <span><?= $incomplete ?></span>
+     <? elseif(in_array($field, $optional_thesis_fields)): ?>
+        <span><?= $optional ?></span>
+     <? else: ?>
+        <span><?= $ok ?></span>
+     <? endif ?>
+     <a href="<?= $this->editFieldLink($field) ?>" title="edit <?= $etd->mods->fieldLabel($field) ?>">
+        <?= $etd->mods->fieldLabel($field) ?></a>
+   </li>
+<? endforeach ?>
 
   <? /* FIXME: should files be last on this list ? */ ?>
 
   <? $new_pdf_url = $this->url(array('controller' => 'file', 'action' => 'add',
       'etd' => $etd->pid, 'type' => 'pdf'), '', true, false); ?>
+<li>
   <?if ($etd->hasPDF()) : ?>
-   <?= $ok ?> <a title="review PDF" href="#updatefile">PDF file</a> 
-   <? /* display pdf count if more than 1 */ ?>
-   <? if (count($this->etd->pdfs) > 1): ?>(<?= count($this->etd->pdfs) ?>) <? endif ?>
-    <a title="add another PDF" class="record-edit" href="<?= $new_pdf_url ?>">add</a> 
+     <?= $ok ?> <a title="review PDF" href="#updatefile">PDF file</a> 
+     <? /* display pdf count if more than 1 */ ?>
+     <? if (count($this->etd->pdfs) > 1): ?>(<?= count($this->etd->pdfs) ?>) <? endif ?>
+     <a title="add another PDF" class="record-edit" href="<?= $new_pdf_url ?>">add</a> 
   <? else : ?>
-    <?= $incomplete ?> <a href="<?= $new_pdf_url ?>">PDF file</a>
-  <? endif ?> <br/>  
+    <?= $incomplete ?> <a href="<?= $new_pdf_url ?>" title="add PDF">PDF file</a>
+  <? endif ?>
+</li>
   
   <? $new_original_url = $this->url(array('controller' => 'file', 'action' => 'add',
       'etd' => $etd->pid, 'type' => 'original'), '', true, false); ?>
+<li>
   <?if ($etd->hasOriginal()) : ?> <? /* link to file section for updates */ ?>
    <?= $ok ?> <a href="#updatefile">original file</a> 
    <? /* display original count if more than 1 */ ?>
    <? if (count($this->etd->originals) > 1): ?>(<?= count($this->etd->originals) ?>)<? endif ?>
     <a title="add another original document" class="record-edit" href="<?= $new_original_url ?>">add</a>
-    <? /* TODO: style add link better */ ?>
   <? else : ?>
-    <?= $incomplete ?> <a href="<?= $new_original_url ?>">original file</a>
-  <? endif ?> <br/>
+    <?= $incomplete ?> <a href="<?= $new_original_url ?>" title="add original file">original file</a>
+  <? endif ?>
+</li>
 
   <? $new_sup_url = $this->url(array('controller' => 'file', 'action' => 'add',
       'etd' => $etd->pid, 'type' => 'supplement'), '', true, false); ?>
+<li>
   <?if ($etd->hasSupplemental()) : ?> <? /* link to file section for updates */ ?>
    <?= $ok ?> <a href="#updatefile">supplemental file</a> (<?= count($this->etd->supplements) ?>)
     <a title="add another supplemental document" class="record-edit" href="<?= $new_sup_url ?>">add</a>
    <? else : ?>
     <?= $optional ?> <a href="<?= $new_sup_url ?>">supplemental file</a>
-  <? endif ?> <br/>
+  <? endif ?>
+</li>
 
   <?/*** rights details - display choices selected ***/ ?>
   <? if ($etd->isRequired("send to ProQuest") && 
    ($etd->mods->degree->name != "PhD" && $etd->mods->degree->name != "")): ?>
       <? /* (PQ submission is not optional for PhDs-- field is required but auto-set to true) */ ?>
-      <? $pq_submit = $etd->mods->hasSubmitToProquest() ?>
-      <?= $pq_submit ? $ok : $incomplete; ?> <a href="<?= $this->editFieldLink('send to ProQuest') ?>">send to ProQuest</a>
-      <?= $pq_submit ? ": <b>" . $etd->mods->pq_submit . "</b>" : ""; /* display choice if set */ ?>
-      <br/>
+      <li>
+        <? $pq_submit = $etd->mods->hasSubmitToProquest() ?>
+        <?= $pq_submit ? $ok : $incomplete; ?> 
+        <a href="<?= $this->editFieldLink('send to ProQuest') ?>"
+            title="edit ProQuest options">send to ProQuest</a>
+        <? if ($pq_submit): ?><b><?= $etd->mods->pq_submit ?><? endif /* display choice if set */ ?>
+      </li>
   <? endif ?>
 
   <? /* if not submitting to PQ and copyright is set, suppress (redundant) */ ?>
   <? $copyright = $etd->mods->hasCopyright(); ?>
   <? if ($etd->mods->submitToProquest() && $copyright): ?>
-    <?= $copyright ? $ok : $incomplete; ?> <a href="<?= $this->editFieldLink('copyright') ?>">copyright</a>
+  <li>
+    <?= $copyright ? $ok : $incomplete; ?> 
+    <a href="<?= $this->editFieldLink('copyright') ?>" title="edit copyright options">copyright</a>
     <?= $copyright ? ": <b>" . $etd->mods->copyright . "</b>" : ""; /* display choice if set */ ?>
-    <br/>
+  </li>
   <?endif ?>
   
   <? $embargo = $etd->mods->hasEmbargoRequest(); ?>
-  <?= $embargo ? $ok : $incomplete; ?> <a href="<?= $this->editFieldLink('embargo request') ?>">embargo request</a>
-  <?= $embargo ? ": <b>" . $etd->mods->embargo_request . "</b>" : "" ?>
-   <br/>
-  <?= $etd->mods->hasSubmissionAgreement() ? $ok : $incomplete; ?>
-     <a href="<?= $this->editFieldLink('submission agreement') ?>">submission agreement</a><br/>
-  
-   <? if ($this->acl->isAllowed($this->role, $this->etd, "submit")
-    && $etd->readyToSubmit()): ?>
-     <p><a class="button" href="<?= $this->url(array('controller' => 'submission',
-        'action' => 'review')) ?>">review &amp; submit &gt;</a></p>
-  <? endif ?>                    
+  <li>
+    <?= $embargo ? $ok : $incomplete; ?>
+    <a href="<?= $this->editFieldLink('embargo request') ?>" 
+      title="edit embargo request">embargo request</a>
+    <? if ($embargo): ?><b><?= $etd->mods->embargo_request ?></b><? endif ?>
+  </li>
+  <li>
+     <?= $etd->mods->hasSubmissionAgreement() ? $ok : $incomplete; ?>
+     <a href="<?= $this->editFieldLink('submission agreement') ?>"
+      title="edit submission agreement">submission agreement</a>
+  </li>
 
-</p>
+</ul>
+
+<? /* display the submit button if the user has permission and the record is complete */ ?>  
+ <? if ($this->acl->isAllowed($this->role, $this->etd, "submit")
+  && $etd->readyToSubmit()): ?>
+   <p><a class="button" href="<?= $this->url(array('controller' => 'submission',
+      'action' => 'review')) ?>">review &amp; submit &gt;</a></p>
+<? endif ?>                    
+
