--- a/src/app/views/scripts/view/_files.phtml
+++ b/src/app/views/scripts/view/_files.phtml
@@ -6,7 +6,8 @@
         <?/* Add file and re-order file links */?>
         <? if ($this->acl->isAllowed($this->role, $this->etd, "add file")): ?>
            <a class="record-edit" class="action" href="<?= $this->url(array("controller" => "file",
-            "action" => "add", "etd" => $this->etd->pid), null, true, false)?>">add a file</a>
+            "action" => "add", "etd" => $this->etd->pid), null, true, false)?>"
+            title="add a PDF or original file">add a file</a>
 
            <? if ($this->acl->isAllowed($this->role, $this->etd, "order files")
            && (count($this->etd->pdfs) > 1 || count($this->etd->originals) > 1
@@ -46,10 +47,10 @@
           <?endif ?>
         
     <? if ($this->acl->isAllowed($this->role, $file, "edit")): ?>
-      <a class ="record-edit" href="<?= $this->url(array("controller" => "file", "action" => "edit", "pid" => $file->pid), '', true, false)?>">edit title/description</a>
+      <a class ="record-edit" href="<?= $this->url(array("controller" => "file", "action" => "edit", "pid" => $file->pid), '', true, false)?>" title="edit file display information">edit title/description</a>
     <? endif ?>
     <? if ($this->acl->isAllowed($this->role, $file, "remove")): ?>
-      <a class ="record-edit" href="<?= $this->url(array("controller" => "file", "action" => "remove", "pid" => $file->pid), '', true, false)?>">remove</a>
+      <a class ="record-edit" href="<?= $this->url(array("controller" => "file", "action" => "remove", "pid" => $file->pid), '', true, false)?>" title="remove this file">remove</a>
     <? endif ?>
           <? if ($this->acl->isAllowed($this->role, $file, "view modified")
      && isset($file->lastModified)): ?>        
