--- a/src/app/views/scripts/view/summary.phtml
+++ b/src/app/views/scripts/view/summary.phtml
@@ -14,16 +14,23 @@
      <? else: ?>   <?= $year ?> <? endif ?>
    <? endif ?>
 
-   <? if(isset($this->etd->authorInfo)): ?>
+   <? /* if author info exists and user has permission to view or edit, display links */ ?>
+   <? if (isset($this->etd->authorInfo)): ?>
       <? if ($this->acl->isAllowed($this->etd->getUserRole($this->current_user), "authorInfo", "view") ): ?>
-         <a class="record-edit" href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'view',
-         'pid' => $this->etd->authorInfo->pid), '', true, false) ?>">edit contact info</a>
+         <span class="userinfo">[<a href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'view',
+         'pid' => $this->etd->authorInfo->pid), '', true, false) ?>" 
+         title="view contact information">contact info</a>]</span>
       <? endif ?>
-   <? else: ?>
       <? if ($this->acl->isAllowed($this->etd->getUserRole($this->current_user), "authorInfo", "edit") ): ?>
-         <a class="record-edit" href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'new',
-          'etd' => $this->etd->pid), '', true, false) ?>">edit contact info</a>
+         <a class="record-edit" href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'edit',
+           'pid' => $this->etd->authorInfo->pid), '', true, false) ?>"
+           title="edit contact information">edit</a>
       <? endif ?>
+  <? /* if author info does not exist and user has permission to add it, link to create new */ ?>
+   <? elseif ($this->acl->isAllowed($this->etd->getUserRole($this->current_user), "authorInfo", "edit") ): ?>
+     <a class="record-edit" href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'new',
+        'etd' => $this->etd->pid), '', true, false) ?>"
+        title="add contact information">add contact info</a>
    <? endif ?>
 
   <br/>
@@ -59,7 +66,7 @@
       <? endforeach ?>
     <? endif ?>
    <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-      <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "faculty", "pid" => $this->etd->pid())) ?>">edit</a>
+      <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "faculty", "pid" => $this->etd->pid())) ?>" title="edit committee members">edit</a>
    <? endif ?>
     <? // linebreak only after both sets of committee members ?> <br/>
      
@@ -87,7 +94,7 @@
       <? endforeach ?> 
     <? endif ?>
     <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-       <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "faculty", "pid" => $this->etd->pid())) ?>">edit</a>
+       <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "faculty", "pid" => $this->etd->pid())) ?>" title="edit committee members">edit</a>
     <? endif ?>
     <? // linebreak only after both sets of committee members ?> <br/>
       
@@ -105,7 +112,7 @@
       <a href="<?= $url ?>"><?= $label ?></a><? else: ?><?= $label ?><? endif ?><? if ($field != $fields[count($fields) - 1]): ?>; <? endif ?>
    <? endforeach ?>
    <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-      <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "researchfield", "pid" => $this->etd->pid())) ?>">edit</a>
+      <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "researchfield", "pid" => $this->etd->pid())) ?>" title="edit research fields">edit</a>
    <? endif ?>
    <br/>
    
@@ -124,7 +131,7 @@
         <? if ($field != $fields[count($fields) - 1]): ?>; <? endif ?>
      <? endforeach ?>
      <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-        <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "partneringagency", "pid" => $this->etd->pid())) ?>">edit</a>
+        <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "partneringagency", "pid" => $this->etd->pid())) ?>" title="edit partnering agencies">edit</a>
      <? endif ?>
      <br/>
    <? endif  ?>
@@ -138,7 +145,7 @@
   '', true) ?>"><?= $keyword ?></a><? else: ?><?= $keyword ?><? endif ?><? if ($keyword != $keywords[count($keywords)-1]): ?>; <? endif ?>
     <? endforeach ?>
     <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-       <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "record", "pid" => $this->etd->pid())) ?>">edit</a>
+       <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "record", "pid" => $this->etd->pid())) ?>" title="edit keywords">edit</a>
     <? endif ?>
      <br/>
 
@@ -157,15 +164,18 @@
         <? endif ?>
      <? endif /* has subfield */ ?>
      <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-        <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "program", "pid" => $this->etd->pid())) ?>">edit</a>
+        <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "program", "pid" => $this->etd->pid())) ?>" title="edit school and program">edit</a>
      <? endif ?>
      <br/>
 
 <? if ($this->acl->isAllowed($this->etd->getUserRole($this->current_user), "etd", "view mods")): ?>
   <span style="float:right;padding-right:5px;">          
-    <a href="<?= $this->url(array("controller" => "view", "action" => "mods", "pid" => $this->etd->pid())) ?>">MODS</a>  
-  | <a href="<?= $this->url(array("controller" => "view", "action" => "dc", "pid" => $this->etd->pid())) ?>">DC</a>
-  | <a href="<?= $this->url(array("controller" => "view", "action" => "rels", "pid" => $this->etd->pid())) ?>">RELS-EXT</a>
+    <a href="<?= $this->url(array("controller" => "view", "action" => "mods", "pid" => $this->etd->pid())) ?>"
+      title="view raw MODS XML">MODS</a>  
+  | <a href="<?= $this->url(array("controller" => "view", "action" => "dc", "pid" => $this->etd->pid())) ?>"
+       title="view raw DC XML">DC</a>
+  | <a href="<?= $this->url(array("controller" => "view", "action" => "rels", "pid" => $this->etd->pid())) ?>"
+      title="view raw RELS-EXT XML">RELS-EXT</a>
   </span>
   <br/>
 <? endif ?>
