--- a/src/app/views/scripts/index/_submission.phtml
+++ b/src/app/views/scripts/index/_submission.phtml
@@ -1,7 +1,8 @@
 <? if (isset($this->current_user) && $this->current_user->hasUnpublishedEtd()): ?>
   <? $user_etds = $this->current_user->getEtds(); ?>
-<p class="notice">
-    Your submission, <a href="<?= $this->url(array("controller" => "view",
-	"action" => "record", "pid" => $user_etds[0]->pid)) ?>"><b><?= $user_etds[0]->title(); ?></b></a>,
+<div class="notice">
+    Your submission, <a class="etd-title" href="<?= $this->url(array("controller" => "view",
+	"action" => "record", "pid" => $user_etds[0]->pid)) ?>"><?= $user_etds[0]->title(); ?></a>,
     is currently in <b><?= $user_etds[0]->status() ?></b> status.
+</div>    
 <? endif ?>       
