[#32916227] Fixed screening questions display in IE

--- a/src/public/css/etd.css
+++ b/src/public/css/etd.css
@@ -1248,3 +1248,6 @@ ol.alpha {
 .notice .etd-title * {
   display: inline;
 }
+
+/* remove border for checkbox, radio buttons  in IE */
+input[type="radio"], input[type="checkbox"] {border: none;} 
