make links open in new window / tab

--- a/branches/release_1.15/src/app/views/scripts/submission/start.phtml
+++ b/branches/release_1.15/src/app/views/scripts/submission/start.phtml
@@ -91,7 +91,7 @@
       <p>You must obtain permissions or remove the copyrighted content from 
           your ETD before proceeding with submission. Please list all 
           materials for which you received permission on the ETD submission 
-          form available on the <a href="https://etd.library.emory.edu/">ETD home page</a>.</p>
+          form available on the <a href="https://etd.library.emory.edu/" target="_blank">ETD home page</a>.</p>
     </div>
 <!--     <div id="copyright_perms_yes"> <? /*  Show if answered YES to permissions */ ?>
             <p>Complete Part 4 of the Submission Form.</p>
