made Next link look like a button

--- a/branches/release_1.15/src/app/views/scripts/submission/intro.phtml
+++ b/branches/release_1.15/src/app/views/scripts/submission/intro.phtml
@@ -29,4 +29,4 @@
     with your major advisor before proceeding.You must complete the entire 
     pre-screening questionnaire before you can begin creating your record.</p>
 
-<p style ="text-align: center"><a href="<?= $this->url(array("controller" => "submission", "action" => "start"))?>">Next</a> </p>
+<p style ="text-align: center"><a href="<?= $this->url(array("controller" => "submission", "action" => "start"))?>" class="button">Next</a> </p>
