a few corrections to screenng questions

--- a/branches/release_1.15/src/app/views/scripts/submission/intro.phtml
+++ b/branches/release_1.15/src/app/views/scripts/submission/intro.phtml
@@ -4,14 +4,10 @@
     ol li {padding-top: 0; margin-top: 0}
 </style>
 <p>The Electronic Theses and Dissertations (ETD) repository provides online 
-    access to the university’s master’s theses, doctoral dissertations, 
-    and undergraduate honors theses, increasing the visibility of our scholars 
-    and fulfilling the university’s mission to contribute to academic 
-    scholarship.The Electronic Theses and Dissertations (ETD) repository 
-    provides online access to the university’s master’s theses, doctoral 
-    dissertations, and undergraduate honors theses, increasing the visibility 
-    of our scholars and fulfilling the university’s mission to contribute to 
-    academic scholarship.</p>
+    access to the University’s master’s theses, doctoral dissertations, and 
+    undergraduate honors theses, increasing the visibility of our scholars 
+    and fulfilling the University’s mission to contribute to academic 
+    scholarship.</p>
 
 <p>The ETD submission process involves three steps:
 <ol>
