removed old phone number from submission questions

--- a/branches/release_1.15/src/app/views/scripts/submission/start.phtml
+++ b/branches/release_1.15/src/app/views/scripts/submission/start.phtml
@@ -112,7 +112,7 @@ government documents created by a US government employee as part of their employ
   <div id="patent_yes">   <? /* display only if yes to patent */ ?>	 
      <p>Further conversation with ETD administrators is required before you 
          can continue with the ETD submission process. Please contact ETD Help 
-         at <a href="mailto:etd-admin@listerv.cc.emory.edu">etd-admin@listerv.cc.emory.edu</a> or call (404)727-5301.</p>
+         at <a href="mailto:etd-admin@listerv.cc.emory.edu">etd-admin@listerv.cc.emory.edu</a>.</p>
      <? /* TODO: use configured email; remove phone number? */ ?>
   </div>
 </li>
