fixed css to prevent jumping when field descrition is displayed

--- a/branches/reporting/src/app/views/scripts/report/custom.phtml
+++ b/branches/reporting/src/app/views/scripts/report/custom.phtml
@@ -11,9 +11,11 @@
     
 	  
 <span class="ui-widget" style="display: inline-block;" >
-<div id='field-desc' style="color:white; background-color:black; display: none"></div>    
+<div id='field-desc' style="color:white; background-color:black; position: absolute; top: 104px; display: none"></div>    
+<div style="margin-top:20px;">
 <input id="custom-report" size="80" />
 <?= $this->formSubmit("search", "Search >", array("class" => "submitbutton")); ?>
+</div>
 </span>
     
 </form>
